<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/settings_debug_child"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            style="@style/TextAppearance.AppCompat.Body2"
            android:text="@string/settings_section_debug_reauth"
            android:tag="label"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="16dp"
            android:layout_width="match_parent"
            android:textColor="?attr/colorAccent"
            android:layout_height="wrap_content" />

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="?android:selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="16dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="64dp"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_debug_break_reauth"
                    android:textColor="?attr/fontColor"
                    android:textSize="14sp" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_debug_break_reauth_desc"
                    android:textColor="?attr/fontColor"
                    android:textSize="12sp" />
        </LinearLayout>

        <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/settings_debug_breakreauth"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingEnd="16dp"
                android:backgroundTint="?attr/tintColor"
                android:button="@null"
                android:buttonTint="?attr/tintColor"
                android:hapticFeedbackEnabled="true"
                android:textColor="?attr/fontColor"
                android:textColorHint="?attr/fontColor" />
    </RelativeLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="0.25dp"
            android:alpha=".25"
            android:background="?attr/tintColor" />

    <RelativeLayout
            android:id="@+id/settings_debug_triggerreauth"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="?android:selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_debug_trigger_reauth"
                    android:textColor="?attr/fontColor"
                    android:textSize="14sp" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_debug_trigger_reauth_desc"
                    android:textColor="?attr/fontColor"
                    android:textSize="12sp" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
