<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="?attr/card_background"
        app:cardCornerRadius="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/md_light_green_500"
                android:padding="24dp"
                android:text="@string/multi_column_title"
                android:textColor="#fff"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="20dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:paddingTop="20dp">

                    <LinearLayout
                        android:id="@+id/portrait"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:orientation="vertical"
                        android:paddingBottom="8dp"
                        android:paddingTop="8dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/multi_column_portrait_count"
                            android:textColor="?attr/fontColor"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/portrait_current"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:alpha=".86"
                            android:textColor="?attr/fontColor"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/landscape"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:orientation="vertical"
                        android:paddingBottom="8dp"
                        android:paddingTop="8dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/multi_column_landscape_count"
                            android:textColor="?attr/fontColor"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/landscape_current"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:alpha=".86"
                            android:textColor="?attr/fontColor"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/singlecolumnmultiwindow"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="8dp"
                            android:layout_marginTop="8dp"
                            android:backgroundTint="?attr/tintColor"
                            android:button="@null"
                            android:buttonTint="?attr/tintColor"
                            android:hapticFeedbackEnabled="true"
                            android:text="@string/single_column_multi_window"
                            android:textColor="?attr/fontColor"
                            android:textColorHint="?attr/fontColor" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/fullcomment"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        android:backgroundTint="?attr/tintColor"
                        android:button="@null"
                        android:buttonTint="?attr/tintColor"
                        android:hapticFeedbackEnabled="true"
                        android:text="@string/multi_column_force_full"
                        android:textColor="?attr/fontColor"
                        android:textColorHint="?attr/fontColor" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
