<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardBackgroundColor="?attr/card_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/md_light_green_500"
            android:gravity="center_vertical"
            android:paddingStart="24dp"
            android:text="@string/example_sub"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/share"
            style="?attr/borderlessButtonStyle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="-59dp"
            android:padding="12dp"
            app:tint="@android:color/white"
            app:srcCompat="@drawable/ic_share" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20dp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:paddingTop="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingEnd="16dp">

                    <TextView
                        android:id="@+id/totalKarma"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="12dp"
                        android:text="0"
                        android:textColor="?attr/fontColor"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/profile_karma_total"
                        android:textColor="?attr/fontColor"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingEnd="16dp">

                    <TextView
                        android:id="@+id/linkkarma"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="12dp"
                        android:text="43015"
                        android:textColor="?attr/fontColor"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/profile_karma_link"
                        android:textColor="?attr/fontColor"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/wiki"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingEnd="16dp">

                    <TextView
                        android:id="@+id/commentkarma"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="12dp"
                        android:text="2034"
                        android:textColor="?attr/fontColor"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/profile_karma_comment"
                        android:textColor="?attr/fontColor"
                        android:textSize="16sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/moreinfo"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginStart="5dp"
                    android:gravity="center_vertical"
                    android:paddingEnd="16dp"
                    android:paddingStart="8dp"
                    android:text="Redditor for 2 years, 3 months of gold remiaing"
                    android:textColor="?attr/fontColor"
                    android:textSize="16sp"/>

                <HorizontalScrollView
                    android:id="@+id/trophies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/trophies_inner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" />
                </HorizontalScrollView>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
